[project]
name = "asyncev"
version = "1.0.1"
description = "Asynchronous named events with no dependencies"
authors = [
  { name = "Emil Tylén", email = ""}
]
readme="README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["library", "async", "asyncio", "event"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/acetylen/asyncev"
Issues = "https://github.com/acetylen/asyncev/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
]

[tool.tox]
requires = ["tox>4.19"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "run under {base_python}"
commands = [["python", "-m", "unittest"]]

[tool.pyright]
reportExplicitAny = false
